--- a/tools/s3-restore.yaml
+++ b/tools/s3-restore.yaml
@@ -55,6 +55,7 @@ tools:
     env:
       - AWS_PROFILE
       - SLACK_API_TOKEN
+      - SLACK_CHANNEL_ID
       - OPERATING_SLACK_CHANNEL
       - KUBIYA_AGENT_UUID
       - KUBIYA_USER_ORG
