--- a/tools/s3-restore.yaml
+++ b/tools/s3-restore.yaml
@@ -57,6 +57,8 @@ tools:
       - AWS_PROFILE
       - SLACK_API_TOKEN
       - SLACK_CHANNEL_ID
+      - SLACK_THREAD_TS
+      - OPERATING_SLACK_CHANNEL
       - KUBIYA_AGENT_UUID
       - KUBIYA_USER_ORG
       - KUBIYA_API_KEY
