--- a/tools/s3-restore.yaml
+++ b/tools/s3-restore.yaml
@@ -4,7 +4,7 @@ tools:
     image: golang:latest
     description: Initiates the restore process for objects from S3 Reduced Redundancy storage class.
     alias: s3-restore
-    # long_running: true # set as a k8s job
+    long_running: true # set as a k8s job
     content: |
       # Set default values for environment variables
       REPO_URL="${REPO_URL:-https://github.com/kubiya-solutions-engineering/s3-restore}"
