--- a/tools/s3-restore.yaml
+++ b/tools/s3-restore.yaml
@@ -2,8 +2,8 @@ tools:
   - name: s3-restore
     image: golang:latest
     description: Initiates the restore process for objects from S3 Reduced Redundancy storage class.
-    alias: s3-restore
-    # long_running: true # set as a k8s job
+    alias: s3restore
+    long_running: true # set as a k8s job
     content: |
       # Set default values for environment variables
       REPO_URL="${REPO_URL:-https://github.com/kubiya-solutions-engineering/s3restore}"
